--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1807,8 +1807,10 @@ table td {
     font-weight: bold;
     color: black;
     background: #fae901;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2.5%;
+    padding-bottom: 1.5%;
     box-shadow: 0px 0px 15px yellow;
     font-size: 110%;
 }
@@ -1853,11 +1855,13 @@ table td {
 
 .titleRight {
     display: flex;
-    justify-content: flex-end;
-    font-size: 500%;
+    justify-content: flex-start;
+    font-size: 5vw;
     font-family: Wrong, sans-serif;
     padding-top: 10%;
+    margin-left: 30%;
 }
+
 .exchanges {
     margin-top: -2%;
 }
