--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1787,6 +1787,8 @@ table td {
     padding-bottom: 2%;
     box-shadow: 0px 0px 15px yellow;
     font-size: 120%;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 .buttonLeaks {
     border: 1px #a69d0a solid;
@@ -1800,6 +1802,8 @@ table td {
     padding-bottom: 1%;
     box-shadow: 0px 0px 15px yellow;
     font-size: 120%;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 .buttonBrowse {
     border: 1px #a69d0a solid;
