--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1430,7 +1430,7 @@ table td {
     margin: 40px 0;
     text-align: center;
     color: yellow;
-    font-family: 'Mulish';
+    font-family: "Mulish";
     font-weight: bold;
 }
 
@@ -2105,7 +2105,7 @@ b,
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
-}      
+}
 
 @media (max-width: 600px) {
     .welcome {
