--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2045,6 +2045,19 @@ b,
     margin: -90px 0 0 105px;
 }
 
+@media (max-width: 1200px) {
+    .femaleGangster {
+        width: 80%;
+        margin: -50px 0 0 105px;
+    }
+
+    .farmImage {
+        width: 45vw;
+        margin-top: -30px;
+    }
+
+}
+
 .browseGangsterDiv {
     text-align: right;
     /*padding-right: 5vw;*/
