Add header Video and change image

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2082,6 +2082,7 @@ b,
 .femaleGangster {
     width: 70%;
     margin: -10% 0 0 23%;
+    position: relative;
 }
 
 @media (max-width: 1200px) {
@@ -2157,10 +2158,13 @@ b,
 
 @media (max-width: 600px) {
     .welcome {
-        font-size: 7.5vw;
+        font-size: 12.5vw;
+        text-align: center;
     }
     .welcomeSub {
-        font-size: 1.5vw;
+        font-size: 4vw;
+        width: 90%;
+        text-align: center;
     }
     .assetsTitle {
         justify-content: center;
