--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2276,3 +2276,112 @@ b,
         padding-right: 0;
     }
 }
+
+.tile-description {
+    font-size: 84% !important;
+    font-weight: normal;
+    text-align: center !important;
+    line-height: 130% !important;
+    margin: 4px 0 12px !important;
+}
+
+.overview-title {
+    font-family: ModecoBold !important;
+    font-size: 2.6rem;
+    text-transform: uppercase;
+    align-self: center;
+}
+
+.infoButtons .MuiButtonBase-root {
+    border-radius: 100px !important;
+    background: #575757 0 0 no-repeat padding-box !important;
+    border: 1px solid #707070 !important;
+    color: #ffffffd1 !important;
+    font-size: 1rem !important;
+    min-width: 160px !important;
+}
+
+.infoButtons .MuiButtonBase-root.selected {
+    background: #ffee00d1 0 0 no-repeat padding-box !important;
+    box-shadow: 0 0 25px #ffee00dd !important;
+    border-color: #ffee00 !important;
+    color: #000000d1 !important;
+}
+
+.centered {
+    text-align: center;
+}
+
+.info-section-title {
+    clear: both;
+    font-size: 1.2rem;
+    text-align: center;
+    color: #ffee00;
+}
+
+.info-section-subtitle {
+    font-size: 84% !important;
+    font-weight: normal;
+    text-align: center !important;
+    line-height: 130% !important;
+    margin: 4px 0 12px !important;
+    padding: 20px;
+}
+
+.sectionCard {
+    margin: 8px;
+    border-radius: 20px !important;
+    border: 1px solid #ffffcc40;
+}
+
+.info-section-card-title {
+    clear: both;
+    font-size: 0.9rem;
+    text-align: center;
+    color: white;
+    padding-bottom: 8px;
+}
+
+.info-section-footer {
+    font-size: 84% !important;
+    font-weight: normal;
+    text-align: center !important;
+    line-height: 130% !important;
+    padding: 30px;
+}
+
+.floatLeft {
+    float: left;
+}
+
+.floatRight {
+    float: right;
+}
+
+.bit-smaller {
+    font-size: 90%;
+}
+
+.info-tile-base {
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.6)
+    ) !important;
+    border: 1px solid #8b8b8b90;
+    border-radius: 25px;
+    opacity: 1;
+}
+
+.info-tile-title {
+    clear: both;
+    font-size: 1.2rem;
+    text-align: left;
+}
+
+.info-tile-description {
+    font-size: 84% !important;
+    font-weight: normal;
+    text-align: left !important;
+    line-height: 130% !important;
+    margin: 4px 0 12px !important;
+}
