--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -652,6 +652,7 @@ img.pc90 {
 
 .bold {
     font-weight: bold !important;
+    color: white;
 }
 
 /*.bg0 {*/
@@ -2286,7 +2287,7 @@ b,
 }
 
 .overview-title {
-    font-family: ModecoBold !important;
+    font-family: Wrong, sans-serif;
     font-size: 2.6rem;
     text-transform: uppercase;
     align-self: center;
@@ -2384,4 +2385,9 @@ b,
     text-align: left !important;
     line-height: 130% !important;
     margin: 4px 0 12px !important;
+}
+
+.light {
+    color: white;
+    font-family: Mulish, sans-serif;
 }
