--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2000,7 +2000,8 @@ footer.MuiContainer-root {
     border-top: 1px solid;
     border-color: #ffdd0080 !important;
     background: black;
-    padding-bottom: 100px;
+    z-index: 2;
+    position: relative;
 }
 
 .seed-container .footer {
@@ -2211,6 +2212,11 @@ b,
     justify-content: center;
     height: fit-content;
     margin-top: auto;
+}
+.tallGangster {
+    position: absolute;
+    bottom: -5%;
+    width: 100%;
 }
 
 @media (max-width: 600px) {
