--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -105,6 +105,7 @@ a:hover {
 
 .navbar-light .navbar-text {
     color: whitesmoke;
+    white-space: nowrap;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -1371,7 +1372,7 @@ table td {
 
 .wrongMobile {
     font-family: Wrong, sans-serif;
-    font-size: 7vw;
+    font-size: 3rem;
     color: white;
     padding: 11% 0;
 }
@@ -1502,7 +1503,7 @@ table td {
 }
 
 .mr-auto a {
-    font-size: 1.2vw !important;
+    font-size: 1.2rem !important;
 }
 
 @media (max-width: 990px) {
@@ -2231,131 +2232,6 @@ b,
     font-size: inherit;
 }
 
-@media (max-width: 600px) {
-    .welcome {
-        font-size: 12.5vw;
-        text-align: center;
-    }
-    .welcomeSub {
-        font-size: 4vw;
-        width: 90%;
-        text-align: center;
-    }
-    .assetsTitle {
-        justify-content: center;
-        font-size: 10.5vw;
-        padding-top: 5%;
-    }
-
-    .assetsSub {
-        font-size: 2.5vw;
-        margin-top: 0;
-        width: 90%;
-        margin-left: 5%;
-        text-align: center;
-    }
-
-    .gangster3 {
-        width: 56%;
-        margin-top: 0;
-        margin-bottom: -2%;
-        position: relative;
-        left: 25%;
-    }
-
-    .browseButtonDiv {
-        padding-top: 25px;
-        justify-content: center;
-        display: flex;
-        padding-bottom: 20px;
-    }
-
-    .browseSub {
-        font-size: 2.5vw;
-        margin-top: 0;
-        width: 90%;
-        margin-left: 5%;
-        text-align: center;
-    }
-
-    .title {
-        justify-content: center;
-        font-size: 10vw;
-        padding-top: 25px;
-    }
-
-    .textSub {
-        font-size: 2vw;
-        width: 100%;
-        padding-left: 5%;
-        padding-right: 5%;
-        text-align: center;
-    }
-
-    .empireButtonDiv {
-        justify-content: center;
-        display: flex;
-    }
-
-    .farmImage {
-        width: 70%;
-        padding-left: 25%;
-        margin-left: 0%;
-        padding-top: 0;
-    }
-
-    .button {
-        font-size: 5.5vw !important;
-        margin: 1%;
-    }
-
-    .buttonSeed {
-        font-size: 5.5vw !important;
-        margin: 1%;
-    }
-
-    .buttonBrowse {
-        font-size: 5.5vw !important;
-        margin: 1%;
-    }
-
-    .buttonAssets {
-        font-size: 5.5vw !important;
-        margin: 1%;
-    }
-
-    .buttonLeaks {
-        padding-left: 14%;
-        padding-right: 16%;
-        padding-top: 3%;
-        padding-bottom: 2%;
-    }
-
-    .welcomeLeak {
-        display: flex;
-        justify-content: center;
-    }
-
-    .wrongMobile.top {
-        margin-left: 0;
-    }
-
-    .wrongMobile.bottom {
-        margin-left: 0;
-    }
-    .textSub2 {
-        font-size: 2.5vw;
-        margin-top: 0;
-        width: 90%;
-        margin-left: 5%;
-        text-align: center;
-    }
-    .overFarm {
-        text-align: inherit;
-        padding-right: 0;
-    }
-}
-
 .tile-description {
     font-size: 84% !important;
     font-weight: normal;
@@ -2388,9 +2264,6 @@ b,
 }
 
 @media (max-width: 600px) {
-    .infoButtons .MuiButtonBase-root {
-        font-size: 3.5vw !important;
-    }
     .infoButton {
         padding: 0px !important;
     }
@@ -2554,4 +2427,149 @@ b,
 .extraLight {
     font-weight: lighter !important;
     font-family: Mulish, sans-serif !important;
+}
+
+@media (max-width: 600px) {
+
+    .roadmapTitle,
+    .overview-title{
+        font-size: 3rem !important;
+        padding-top: 40px !important;
+    }
+
+    .tile-title {
+        text-align: center !important;
+    }
+
+    .infoButtons .MuiButtonBase-root {
+        font-size: 1rem !important;
+        min-width: 100px !important;
+        padding: 8px 2px !important;
+        line-height: 17px !important;
+        border-radius: inherit !important;
+    }
+
+    .welcome {
+        font-size: 12.5vw;
+        text-align: center;
+    }
+    .welcomeSub {
+        font-size: 4vw;
+        width: 90%;
+        text-align: center;
+    }
+    .assetsTitle {
+        justify-content: center;
+        font-size: 10.5vw;
+        padding-top: 5%;
+    }
+
+    .assetsSub {
+        font-size: 1rem !important;
+        margin-top: 0;
+        width: 90%;
+        margin-left: 5%;
+        text-align: center;
+    }
+
+    .gangster3 {
+        width: 56%;
+        margin-top: 0;
+        margin-bottom: -2%;
+        position: relative;
+        left: 25%;
+    }
+
+    .browseButtonDiv {
+        padding-top: 25px;
+        justify-content: center;
+        display: flex;
+        padding-bottom: 20px;
+    }
+
+    .browseSub {
+        font-size: 2.5vw;
+        margin-top: 0;
+        width: 90%;
+        margin-left: 5%;
+        text-align: center;
+    }
+
+    .title {
+        justify-content: center;
+        font-size: 3rem !important;
+        padding-top: 10vh;
+    }
+
+    .textSub {
+        font-size: 1rem !important;
+        width: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        text-align: center;
+    }
+
+    .empireButtonDiv {
+        justify-content: center;
+        display: flex;
+    }
+
+    .farmImage {
+        width: 70%;
+        padding-left: 25%;
+        margin-left: 0%;
+        padding-top: 0;
+    }
+
+    .button {
+        font-size: 5.5vw !important;
+        margin: 1%;
+    }
+
+    .buttonSeed {
+        font-size: 5.5vw !important;
+        margin: 1%;
+    }
+
+    .buttonBrowse {
+        font-size: 5.5vw !important;
+        margin: 1%;
+    }
+
+    .buttonAssets {
+        font-size: 5.5vw !important;
+        margin: 1%;
+    }
+
+    .buttonLeaks {
+        padding-left: 14%;
+        padding-right: 16%;
+        padding-top: 3%;
+        padding-bottom: 2%;
+    }
+
+    .welcomeLeak {
+        display: flex;
+        justify-content: center;
+        font-size: 3rem;
+    }
+
+    .wrongMobile.top {
+        margin-left: 0;
+    }
+
+    .wrongMobile.bottom {
+        margin-left: 0;
+    }
+    .textSub2 {
+        font-size: 2.5vw;
+        margin-top: 0;
+        width: 90%;
+        margin-left: 5%;
+        text-align: center;
+    }
+    .overFarm {
+        text-align: inherit;
+        padding-right: 0;
+    }
 }
