aligned how to play text for mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2590,4 +2590,8 @@ b,
     .info-tile-description {
         font-size: 70% !important;
     }
+
+    .howtoList {
+        padding-left: 0px !important;
+    }
 }
