Fix generic links at the bottom of the seedfarmguide

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -276,7 +276,7 @@ a.yellowHover {
     color: whitesmoke !important;
 }
 
-a.yellowHover:hover {
+.yellow, a.yellowHover:hover {
     color: yellow !important;
 }
 
