--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -27,32 +27,12 @@ body {
     background-color: black; /* #131313 */
     color: whitesmoke;
     font-family: Modeco, sans-serif !important;
-    background-image: url(/images/grafiti-wall.jpg);
-    /*color: #222222;*/
-
-    /*background-size: 100%;*/
-    /*background-position-y: 0;*/
-    /*background-repeat: no-repeat;*/
-    /*background-attachment: fixed;*/
-    /*background-position: bottom;*/
-
-    /*background-image: url(../images/SiteBackground.jpg);*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: center;*/
-    /*background-attachment: fixed;*/
-    /*-moz-background-size: cover;*/
-    /*-o-background-size: cover;*/
-    /*background-size: cover;*/
-    /*width: 100%;*/
+    background-image: url("../images/grafiti-wall.jpg");
 }
 
 .dongle {
     font-family: Dongle, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
-/*.navbar-toggler.collapsed {*/
-/*    visibility: hidden;*/
-/*}*/
 
 .textBlock {
     color: whitesmoke;
@@ -146,18 +126,6 @@ a:hover {
     font-size: 0.85rem;
 }
 
-/*.navbar-light .navbar-text a {*/
-/*    color: gold !important;*/
-/*}*/
-
-/*!*.navbar-light .navbar-text i,*!*/
-/*.navbar-light .navbar-text .extra,*/
-/*    !*.navbar-collapse a i,*!*/
-/*.navbar-collapse a .extra,*/
-/*.navbar-collapse .span2 {*/
-/*    display: none !important;*/
-/*}*/
-
 .container {
     margin-top: 78px;
 }
@@ -193,14 +161,6 @@ div.cardContainer {
 
 .porporino {
 }
-
-/*div.cardDiv {*/
-/*    float: left;*/
-/*    border: 1px solid #eeeeee;*/
-/*    display: inline;*/
-/*    padding: 19px;*/
-/*    margin: 16px;*/
-/*}*/
 
 div.textBlock {
     /*background-color: rgba(0, 0, 0, 0.85);*/
@@ -253,24 +213,6 @@ div.textBlock p:last-child {
     display: block;
     height: 6px;
 }
-
-/*.navbar-collapse a, .navbar-light .navbar-text a, .navbar-collapse .span2 {*/
-/*    border: 1px solid #226;*/
-/*    border-radius: 6px;*/
-/*    margin-right: 7px;*/
-/*    background-color: #003;*/
-/*}*/
-
-/*.bg-dark {*/
-/*    background-color: #002 !important;*/
-/*    border-bottom: 1px dashed #309 !important;*/
-/*}*/
-
-/*@media (min-width: 1400px) {*/
-/*    .container {*/
-/*        max-width: 1400px !important;*/
-/*    }*/
-/*}*/
 
 a.yellowHover {
     color: whitesmoke !important;
@@ -517,19 +459,6 @@ h2 {
 .floatRight {
     float: right;
 }
-
-/*.carousel-item {*/
-/*    position: relative;*/
-/*    display: none;*/
-/*    float: left;*/
-/*    width: 100%;*/
-/*    margin-right: -100%;*/
-/*    -webkit-backface-visibility: hidden;*/
-/*    backface-visibility: hidden;*/
-/*    transition: -webkit-transform .9s ease-in-out;*/
-/*    transition: transform .9s ease-in-out;*/
-/*    transition: transform .9s ease-in-out, -webkit-transform .9s ease-in-out*/
-/*}*/
 
 .comingSoon {
     text-align: center;
